--- a/01.01-vim_normal.ipynb
+++ b/01.01-vim_normal.ipynb
@@ -29,6 +29,107 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cd61af10-9bea-4c89-bf33-b486dffda15e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run second\n",
+    "\n",
+    "if first == True:\n",
+    "    second == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "260f0da8-821c-463d-83a7-e7bdcd04b857",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run fourth\n",
+    "\n",
+    "if third == True:\n",
+    "    fourth = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4d59597e-50b9-4f9a-a0fd-1d1b7fc4818a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run third\n",
+    "\n",
+    "if second == True:\n",
+    "    third == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bee1f6d0-8888-4965-be84-b7d44172fb67",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run fifth\n",
+    "\n",
+    "if fourth == True:\n",
+    "    fifth == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "89e02b30-8397-4cef-b32b-17060673afe8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run first\n",
+    "\n",
+    "first = True\n",
+    "second = False\n",
+    "third = False\n",
+    "fourth = False\n",
+    "fifth = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e688dba0-1d3f-4d6e-84ac-ea26f6d10904",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not quite :(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell needs to be run last\n",
+    "\n",
+    "if fifth == True:\n",
+    "    print('Hooray!')\n",
+    "else:\n",
+    "    print('Not quite :(')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "424cc8a9-d699-438f-961d-e84acfbc6a59",
    "metadata": {
@@ -61,32 +162,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "50fbb18d-67d4-4ec5-abb3-e24b44496961",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Select this cell ..."
+    "# Select this cell ...\n",
+    "\n",
+    "first == True;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "677de64a-a0ed-427c-9c59-29a7934b9d92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## ... and this cell ..."
+    "# ... and this cell ...\n",
+    "\n",
+    "second == True;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "0d5c2b58-8c1b-456c-a9fc-376e4add7cd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## ... and even this cell!"
+    "# ... and even this cell!\n",
+    "\n",
+    "if first and second:\n",
+    "    print('Hooray!')"
    ]
   },
   {
@@ -144,52 +252,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "abcb4e17-e08c-4230-af5d-174f8414da6e",
+   "execution_count": 17,
+   "id": "bce56124-631f-419e-abf6-655c435a98a0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Do not alter or move this cell\n",
+    "# This cell needs to be run second\n",
     "\n",
-    "second = False\n",
-    "third = False"
+    "if first == True:\n",
+    "    second == True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "90af37ca-ddaf-4d12-a130-fbcf6178e378",
+   "execution_count": 18,
+   "id": "593f6dd6-3400-448a-86ed-a398b00d1f7b",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Put this cell second\n",
+    "# This cell needs to be run fourth\n",
     "\n",
-    "second = True"
+    "if third == True:\n",
+    "    fourth = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b79803c1-8875-4f82-b9fe-1380a3d30775",
+   "execution_count": 19,
+   "id": "05d60bba-d58a-42b9-8f69-f31d1730ab97",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Put this cell third\n",
+    "# This cell needs to be run third\n",
     "\n",
     "if second == True:\n",
-    "    third = True"
+    "    third == True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f7ad92ff-d473-443c-9b8a-d47fc649c6f5",
+   "execution_count": 20,
+   "id": "6125135a-ef95-4877-b3aa-9f8a3e9479b3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run fifth\n",
+    "\n",
+    "if fourth == True:\n",
+    "    fifth == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b570ff31-ae07-4968-8761-73fe7eb9cb1f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run first\n",
+    "\n",
+    "first = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5a2219a5-246f-4ee4-95cd-86ee4f7ea3e7",
    "metadata": {
     "tags": []
    },
@@ -198,15 +336,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hooray!\n"
+      "Not quite :(\n"
      ]
     }
    ],
    "source": [
-    "if third == True:\n",
-    "    print(\"Hooray!\")\n",
+    "# This cell needs to be run last\n",
+    "\n",
+    "if fifth == True:\n",
+    "    print('Hooray!')\n",
     "else:\n",
-    "    print(\"Sorry, not quite!\")"
+    "    print('Not quite :(')"
    ]
   },
   {
@@ -223,24 +363,69 @@
     "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>Ctrl</kbd> + <kbd>O</kbd> | Insert a cell above\n",
     "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>O</kbd> | Insert a cell below\n",
     "\n",
-    "Using these shortcuts, add three empty cells above and below the cell marked for this exercise. Once you're done, run the code block labeled as the verifier to check that you have the right number of cells."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "f376db70-b141-40e6-8ca2-4c7e551b047a",
-   "metadata": {},
-   "source": [
-    "Have a cell around which the user inserts cells. Tell the user to insert a certain number of cells above and a certain number of cells below using the appropriate shortcuts (maybe 3 or 4). Attempt an implementation where, using [this tutorial](https://www.geeksforgeeks.org/read-json-file-using-python/https://www.geeksforgeeks.org/read-json-file-using-python), the notebook that the user has edited is read in and the markdown cell explaining the exercise is identified. If this is possible, the rest should just be array manipulation. Spend no more than 30 minutes attempting the implementation. This is a reach goal."
+    "Using these shortcuts, add three empty cells above and below the cell marked for this exercise. Once you're done, *save this notebook* and run the code block labeled as the verifier to check that you have the right number of cells."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29647ad1-5f6e-45e6-80d1-fdb805d2bd0c",
+   "id": "c77cdb3a-c822-46a0-be78-71b4d13eac82",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Please insert some cells above me and below me!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "54a8f976-cec2-46f3-a502-0dbc0629e6ea",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is the verifier\n",
+    "import json\n",
+    "\n",
+    "exercise = 5;\n",
+    "i = 0;\n",
+    "start = 0;\n",
+    "end = 0;\n",
+    "f = open('01.01-vim_normal.ipynb')\n",
+    "book = json.load(f)\n",
+    "\n",
+    "# This loop checks each cell of the notebook for if it is the start of an exercise\n",
+    "# and if the exercise it is checking is the exercise stored in the variable\n",
+    "while i < len(book['cells'])-1:\n",
+    "    if len(book['cells'][i]['source']) != 0:\n",
+    "        contents = book['cells'][i]['source'][0]\n",
+    "        if contents[:3] == '## ':\n",
+    "            n = contents.index(' ')\n",
+    "            m = contents.index(')')\n",
+    "            l = contents[n+1:m]\n",
+    "            if int(l) == exercise:\n",
+    "                start = i;\n",
+    "            elif int(l) == exercise+1:\n",
+    "                end = i;\n",
+    "    i = i + 1\n",
+    "\n",
+    "# This checks the cells between the two points to see if they pass the presccribed\n",
+    "# conditions for the exercise. It checks that there are the right number of cells and\n",
+    "# that the middle cell is the original cell.\n",
+    "if end-start == 9 and book['cells'][start+4]['source'][0] == '# Please insert some cells above me and below me!':\n",
+    "    print('Hooray!')\n",
+    "else:\n",
+    "    print('Boo!')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,6 +454,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "958d8dac-fedf-4c15-bda6-09a77ee4d8bd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell should run only once\n",
+    "\n",
+    "x = 0\n",
+    "first = True\n",
+    "second = False\n",
+    "third = False\n",
+    "fourth = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "1ec81e11-e26f-47ac-b3ab-de065d1f7fed",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Make sure there are four copies of this cell\n",
+    "\n",
+    "x = x + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "df9ad056-d405-480d-804d-89c557f2dc91",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run second\n",
+    "\n",
+    "if first == True:\n",
+    "    second == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7c9efb8c-e70f-4919-82fc-74f6ebc77db3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run fourth\n",
+    "\n",
+    "if third == True:\n",
+    "    fourth = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "09985289-11c9-4db3-9e17-a578d31ba855",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run third\n",
+    "\n",
+    "if second == True:\n",
+    "    third == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "512c50a5-3676-48df-833f-8b7bf8601f0f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# This cell needs to be run fifth\n",
+    "\n",
+    "if fourth == True:\n",
+    "    order == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6400b409-2f54-428c-b34f-1a1338cc9508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the verification cell\n",
+    "\n",
+    "if x == 4 and order == True:\n",
+    "    print('Hooray!')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "105f16bc-aa7c-459c-bd17-11e689ed67e8",
    "metadata": {},
@@ -283,35 +573,91 @@
     "<kbd>Ctrl</kbd> + <kbd>2</kbd> | Turn the cell into Markdown mode\n",
     "<kbd>Ctrl</kbd> + <kbd>3</kbd> | Turn the cell into Raw mode\n",
     "\n",
-    "Using these shortcuts and Vim navigation shortcuts, turn the following cells into the correct mode and run the verification cell to complete the exercise."
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "02587fe3-5be9-4a34-ab98-5991114dffc7",
-   "metadata": {},
-   "source": [
-    "Nothing complicated needs to be here. This is another area where the json evaluator would be a good way to make the exercise checkable. Recall that the file needs to be saved before using any json checking."
+    "Using these shortcuts and Vim navigation shortcuts, turn the following cells into the correct mode, *save this notebook* and run the verification cell to complete the exercise."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f6e12aa1-9e75-4351-98a8-8c85f88b190a",
+   "id": "28a35a56-fbd5-4991-abc3-3b85dd692af9",
    "metadata": {},
    "source": [
-    "##### I want to be turned into a code cell, please!!!"
+    "##### I want to be turned into a raw cell, please!!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "41bc74f6-7f94-40e8-b31c-6c82514614bd",
+   "execution_count": null,
+   "id": "3ce8e547-6b7f-4b75-8932-d125f14d4a53",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "## I want to be turned into a markdown cell :)"
+    "# I want to be turned into a markdown cell :)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "bfb88040-8ea8-481a-934e-ae493d57e73a",
+   "metadata": {},
+   "source": [
+    "# I wish I could be a code cell some day..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "4bb76784-de2d-49ed-9528-587ba93518e2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is the verifier\n",
+    "import json\n",
+    "\n",
+    "exercise = 7;\n",
+    "i = 0;\n",
+    "start = 0;\n",
+    "end = 0;\n",
+    "f = open('01.01-vim_normal.ipynb')\n",
+    "book = json.load(f)\n",
+    "\n",
+    "# This loop checks each cell of the notebook for if it is the start of an exercise\n",
+    "# and if the exercise it is checking is the exercise stored in the variable\n",
+    "while i < len(book['cells'])-1:\n",
+    "    if len(book['cells'][i]['source']) != 0:\n",
+    "        contents = book['cells'][i]['source'][0]\n",
+    "        if contents[:3] == '## ':\n",
+    "            n = contents.index(' ')\n",
+    "            m = contents.index(')')\n",
+    "            l = contents[n+1:m]\n",
+    "            if int(l) == exercise:\n",
+    "                start = i;\n",
+    "    i = i + 1\n",
+    "\n",
+    "# This assigns truth values to the exercise conditions\n",
+    "raw = book['cells'][start+1]['cell_type']=='raw'\n",
+    "markdown = book['cells'][start+2]['cell_type']=='markdown'\n",
+    "code = book['cells'][start+3]['cell_type']=='code'\n",
+    "\n",
+    "# This checks the cells between the two points to see if they pass the presccribed\n",
+    "# conditions for the exercise. It checks that the desired cells are the correct type\n",
+    "if raw and markdown and code:\n",
+    "    print('Hooray!')\n",
+    "else:\n",
+    "    print('Boo!')"
    ]
   },
   {
@@ -341,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "157bb0b7-bd35-4dc1-95ac-07c4eb189606",
    "metadata": {
     "tags": []
@@ -354,6 +700,14 @@
     "# This text should be in the next cell\n",
     "split = False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0a42673-5de7-4a69-b672-af4a863cedfa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
