--- a/01.00-vim_intro.ipynb
+++ b/01.00-vim_intro.ipynb
@@ -10,9 +10,9 @@
     "# JupyterLab Command and JupyterLab Edit\n",
     "JupyterLab has two different modes when interacting with code in a notebook environment: command mode and edit mode.\n",
     "\n",
-    "In command mode, the user is not directly editing any particular cells. Rather, the user is navigating the whole notebook and interacting with cells on a larger scale. If you right click on a cell, you should see options to cut, copy, and paste selected cells. Those commands are part of JupyterLab Command mode.\n",
+    "In command mode, the user is not directly editing any particular cells. Rather, the user is navigating the whole notebook and interacting with cells on a larger scale. If you right click on a cell, you should see options to cut, copy, and paste selected cells. Those commands are part of JupyterLab command mode.\n",
     "\n",
-    "In edit mode, the user is directly editing the contents of a cell. Without ```jupyterlab-vim```, this uses, with exceptions for JupyterLab specific shortcuts, the same keyboard shortcuts that you would use for a processor like Microsoft Word or something simple like Notepad (or whatever equivalent comes to mind for your particular operating system). With the addition of ```jupyterlab-vim```, JupyterLab Edit mode is extended into several additional modes, each tied to Vim editor.\n",
+    "In edit mode, the user is directly editing the contents of a cell. Without ```jupyterlab-vim```, this uses, with exceptions for JupyterLab specific shortcuts, the same keyboard shortcuts that you would use for a processor like Microsoft Word or something simple like Notepad (or whatever equivalent comes to mind for your particular operating system). With the addition of ```jupyterlab-vim```, JupyterLab edit mode is extended into several additional modes, each tied to Vim editor.\n",
     "\n",
     "# Brief notes on Vim\n",
     "\n",
