--- a/01.01-vim_normal.ipynb
+++ b/01.01-vim_normal.ipynb
@@ -21,14 +21,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d8313112-756f-48f9-a7d7-53bd99d9f3e3",
-   "metadata": {},
-   "source": [
-    "For this exercise, create a couple of different cells (does six seem right?) with boolean values that are contingent on other cells having been run beforehand. Put them in a non-standard order. Tell the user to switch between cells in order to have each boolean become true. Mention that switching in this way runs a cell automatically for markdown but not code cells. Also note that this keybinding ctrl j ctrl k works in insert mode as well."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "cd61af10-9bea-4c89-bf33-b486dffda15e",
@@ -149,18 +141,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c556639f-b80a-4bb0-aea7-9f2c5f775b51",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Note on this that you can run selected cells using shift enter. This will help with later parts of the tutorial.\n",
-    "\n",
-    "You can select multiple cells at one time with normal mode and Jupyter mode. In normal mode, you can select these cells using \"ctrl + shift + j\" to select below and \"ctrl + shift + k\" to select above."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "50fbb18d-67d4-4ec5-abb3-e24b44496961",
@@ -216,14 +196,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b018c658-d960-4971-9901-61ee6b9f2e1c",
-   "metadata": {},
-   "source": [
-    "Include in this the keybindings. In the last cell of the document, also include how to center the cell. Centering the cell is probably best put here. Be open to changes for this."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f1ba7d56-4465-4be8-96b8-aec2baa3228a",
    "metadata": {},
@@ -241,13 +213,18 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f2caf3ee-c4fc-4e9e-8f81-16b2d84a7767",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "593f6dd6-3400-448a-86ed-a398b00d1f7b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "When implementing this exercise, it may be best to uninstall and reinstall the extension to see if it clears up some of the bugs. Document these results.\n",
+    "# This cell needs to be run fourth\n",
     "\n",
-    "There are several ways to move cells around using ```vim``` keybindings. In 'normal' mode, you can use \"ctrl + e\" to move the cell you are interacting with down one cell and \"ctrl + y\" to move the cell up. (Moving up seems to be bugged right now). In 'insert' mode, you cannot use this same approach."
+    "if third == True:\n",
+    "    fourth = True"
    ]
   },
   {
@@ -263,21 +240,6 @@
     "\n",
     "if first == True:\n",
     "    second == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "593f6dd6-3400-448a-86ed-a398b00d1f7b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# This cell needs to be run fourth\n",
-    "\n",
-    "if third == True:\n",
-    "    fourth = True"
    ]
   },
   {
@@ -443,14 +405,6 @@
     "<kbd>Ctrl</kbd> + <kbd>O</kbd> + <kbd>P</kbd> | Paste a cell from your system clipboard below the currently selected cell\n",
     "\n",
     "There are several simple tasks for this exercise. While navigating around with Vim shortcuts, remove cells that tell you to remove them and place them where they're needed, copy the cells that you're instructed to copy and paste them as many times as you're told to paste them. Afterwards, select all the cells for the exercise and run them to complete the exercise"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "4278cd9b-805f-427f-b708-cb45b95f7838",
-   "metadata": {},
-   "source": [
-    "This isn't horribly difficult. You could probably get away with doing this using just the select multiple cells task as a way to run all the cells. Include in this exercise simple booleans deleting, not much different from the cell movement exercise. For the yanking and pasting, add a variable with summands so that it's possible to yank it and paste it multiple times. Once it has been pasted enough, it should be possible to just run all the cells and get a multi-conditional if gate to print out success or failure based on variables."
    ]
   },
   {
@@ -687,27 +641,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7f69b527-2503-4df1-b05e-7f406ac5f832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This cell needs to be merged with the cell below to complete mergeChecker\n",
+    "def mergeChecker():"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "157bb0b7-bd35-4dc1-95ac-07c4eb189606",
+   "id": "e911f521-f443-4fdd-82cc-111785a18056",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "split = True\n",
-    "# Split this cell into two by exiting Vim Insert Mode by pressing \"esc\" and then move your cursor over the line you want to split at and press \"-\"\n",
+    "    return True\n",
     "\n",
-    "# This text should be in the next cell\n",
+    "split = True\n",
+    "# SPLIT HERE ># #< SPLIT HERE\n",
+    "# Delete this extra cell\n",
     "split = False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a42673-5de7-4a69-b672-af4a863cedfa",
+   "id": "ef4d4d5a-e3f6-445d-80a4-b80b1ec96098",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "merge = False\n",
+    "\n",
+    "merge = mergeChecker()\n",
+    "\n",
+    "if split and merge:\n",
+    "    print('Hooray!')"
+   ]
   }
  ],
  "metadata": {
