--- a/01.01-vim_normal.ipynb
+++ b/01.01-vim_normal.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "cd61af10-9bea-4c89-bf33-b486dffda15e",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,12 @@
     "# This cell needs to be run second\n",
     "\n",
     "if first == True:\n",
-    "    second == True"
+    "    second = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "260f0da8-821c-463d-83a7-e7bdcd04b857",
    "metadata": {
     "tags": []
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "4d59597e-50b9-4f9a-a0fd-1d1b7fc4818a",
    "metadata": {
     "tags": []
@@ -60,12 +60,12 @@
     "# This cell needs to be run third\n",
     "\n",
     "if second == True:\n",
-    "    third == True"
+    "    third = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "bee1f6d0-8888-4965-be84-b7d44172fb67",
    "metadata": {
     "tags": []
@@ -75,12 +75,12 @@
     "# This cell needs to be run fifth\n",
     "\n",
     "if fourth == True:\n",
-    "    fifth == True"
+    "    fifth = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "89e02b30-8397-4cef-b32b-17060673afe8",
    "metadata": {
     "tags": []
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "e688dba0-1d3f-4d6e-84ac-ea26f6d10904",
    "metadata": {
     "tags": []
@@ -108,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not quite :(\n"
+      "Hooray!\n"
      ]
     }
    ],
@@ -130,8 +130,7 @@
    "source": [
     "## 2) Get used to selecting multiple cells at the same time in normal mode\n",
     "\n",
-    "Much like the previous exercise, this exercise is about moving to adjacent cells. This time though, you are selecting multiple cells at once. To do this use:\n",
-    "\n",
+    "Much like the previous exercise, this exercise is about moving to adjacent cells. This time though, you are selecting multiple cells at once. To do this use: \n",
     "Keystrokes | Effects\n",
     ":---:|---\n",
     "<kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>K</kbd> | Extend selection to the cell above\n",
@@ -142,34 +141,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "50fbb18d-67d4-4ec5-abb3-e24b44496961",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select this cell ...\n",
     "\n",
-    "first == True;"
+    "first = True;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "677de64a-a0ed-427c-9c59-29a7934b9d92",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ... and this cell ...\n",
     "\n",
-    "second == True;"
+    "second = True;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "0d5c2b58-8c1b-456c-a9fc-376e4add7cd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
     "# ... and even this cell!\n",
     "\n",
@@ -239,7 +246,7 @@
     "# This cell needs to be run second\n",
     "\n",
     "if first == True:\n",
-    "    second == True"
+    "    second = True"
    ]
   },
   {
@@ -331,6 +338,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ca72c1ac-6e09-4f09-9fcc-20625f51aa87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6f1b21c-8049-4c7b-91ee-3184ab81baf1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64d72681-d573-495a-88ab-a19fc9a9d1e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c77cdb3a-c822-46a0-be78-71b4d13eac82",
    "metadata": {},
    "outputs": [],
@@ -340,7 +371,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
+   "id": "d1e12f92-dc5c-4e69-818c-59e3bf876ea0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dcf6596-71d3-4980-b0c9-87f16701d595",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b122c552-6160-49b0-a87b-b5733bf3ff20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "54a8f976-cec2-46f3-a502-0dbc0629e6ea",
    "metadata": {
     "tags": []
@@ -350,7 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Boo!\n"
+      "Hooray!\n"
      ]
     }
    ],
@@ -496,7 +551,7 @@
     "# This cell needs to be run fifth\n",
     "\n",
     "if fourth == True:\n",
-    "    order == True"
+    "    order = True"
    ]
   },
   {
@@ -642,29 +697,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f69b527-2503-4df1-b05e-7f406ac5f832",
+   "id": "ec7cd744-1ce3-426a-8e02-53005a0aeb9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# This cell needs to be merged with the cell below to complete mergeChecker\n",
-    "def mergeChecker():"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e911f521-f443-4fdd-82cc-111785a18056",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "def mergeChecker():\n",
+    "\n",
     "    return True\n",
     "\n",
     "split = True\n",
-    "# SPLIT HERE ># #< SPLIT HERE\n",
-    "# Delete this extra cell\n",
-    "split = False"
+    "# SPLIT HERE >#"
    ]
   },
   {
